--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,14 @@
 [x-cloak] {
     display: none !important;
 }
+
+/* Estado de carregamento para imagens */
+img[loading] {
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+img.loaded,
+img.error {
+    opacity: 1;
+}
